--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="colorPrimary">#009999</color>
+    <color name="colorForeground">#33CCCC</color>
+    <color name="colorBackground">#006363</color>
+    <color name="colorPrimaryDark">#1D7373</color>
+    <color name="colorAccent">#5CCCCC</color>
 </resources>
