--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="fullBlack">#000000</color>
+    <color name="alphaBlack">#5B000000</color>
+    <color name="fullWhite">#ffffff</color>
+    <color name="alpha">#00000000</color>
     <color name="colorPrimary">#009999</color>
     <color name="colorForeground">#33CCCC</color>
     <color name="colorBackground">#006363</color>
