--- a/app/src/main/res/layout-v21/detail_activity.xml
+++ b/app/src/main/res/layout-v21/detail_activity.xml
@@ -47,13 +47,14 @@
         android:id="@+id/tags_view"
         android:layout_width="0dp"
         android:layout_height="200dp"
+        android:background="@drawable/tags_gradient"
         android:clickable="false"
         android:fadeScrollbars="false"
         android:visibility="gone"
-        android:background="@drawable/tags_gradient"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
+        app:layout_constraintStart_toStartOf="parent"
+        tools:visibility="visible">
 
         <LinearLayout
             android:id="@+id/tags_layout"
@@ -77,7 +78,20 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/tags_list"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp">
+
+            </androidx.recyclerview.widget.RecyclerView>
+
+            <TextView
+                android:id="@+id/tags_placeholder"
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp"
+                android:background="@color/alpha" />
+
         </LinearLayout>
     </ScrollView>
 
@@ -85,12 +99,13 @@
         android:id="@+id/tags_view_toggler"
         android:layout_width="0dp"
         android:layout_height="200dp"
-        android:visibility="visible"
         android:background="@android:color/transparent"
         android:backgroundTint="@color/alpha"
         android:foregroundTint="@color/alpha"
+        android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        tools:visibility="gone" />
 </androidx.constraintlayout.widget.ConstraintLayout>
