--- a/app/src/main/res/layout-v21/detail_activity.xml
+++ b/app/src/main/res/layout-v21/detail_activity.xml
@@ -56,7 +56,7 @@
         app:layout_constraintStart_toStartOf="parent"
         tools:visibility="visible">
 
-        <LinearLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/tags_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -67,19 +67,22 @@
                 android:id="@+id/tags_header"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginEnd="16dp"
                 android:background="@color/alpha"
                 android:text="Tags:"
                 android:textColor="@color/fullWhite"
-                android:textSize="20dp" />
+                android:textSize="20dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/tags_list"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginEnd="16dp">
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tags_header"
+                tools:ignore="MissingConstraints">
 
             </androidx.recyclerview.widget.RecyclerView>
 
@@ -87,11 +90,13 @@
                 android:id="@+id/tags_placeholder"
                 android:layout_width="match_parent"
                 android:layout_height="120dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginEnd="16dp"
-                android:background="@color/alpha" />
+                android:background="@color/alpha"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tags_list"
+                tools:ignore="MissingConstraints" />
 
-        </LinearLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
 
     <View
