--- a/app/src/main/res/layout/results_activity.xml
+++ b/app/src/main/res/layout/results_activity.xml
@@ -15,7 +15,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:layout="@layout/search_fragment" />
+        tools:layout="@layout/search_fragment"
+        android:tag="results_search_fragment"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/results_view"
