--- a/app/src/main/res/layout/page_bar_fragment.xml
+++ b/app/src/main/res/layout/page_bar_fragment.xml
@@ -56,6 +56,7 @@
         android:ems="10"
         android:inputType="number"
         android:textSize="16sp"
+        android:textColor="@color/colorForeground"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
