--- a/app/src/main/res/layout/about_activity.xml
+++ b/app/src/main/res/layout/about_activity.xml
@@ -65,6 +65,8 @@
     <TextView
         android:id="@+id/project_link"
         android:layout_width="wrap_content"
+        android:autoLink="web"
+        android:maxWidth="270dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
@@ -82,7 +84,7 @@
         android:text="Author:"
         android:textColor="@color/colorText"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/project_link_label" />
+        app:layout_constraintTop_toBottomOf="@+id/project_link" />
 
     <TextView
         android:id="@+id/author_name"
