--- a/app/src/main/res/layout-v21/detail_activity.xml
+++ b/app/src/main/res/layout-v21/detail_activity.xml
@@ -11,11 +11,13 @@
         android:id="@+id/full_image_view"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:contentDescription="nsfw image"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_default_image_item" />
+        app:srcCompat="@drawable/ic_default_image_item"
+        tools:ignore="HardcodedText" />
 
     <LinearLayout
         android:id="@+id/control_layout"
@@ -65,18 +67,37 @@
             android:id="@+id/tags_layout"
             android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/tags_header"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingStart="16dp"
-                android:background="@color/alpha"
-                android:text="Tags:"
-                android:textColor="@color/fullWhite"
-                android:textSize="20dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/tags_header"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:background="@color/alpha"
+                    android:paddingStart="16dp"
+                    android:text="Tags:"
+                    android:textColor="@color/fullWhite"
+                    android:textSize="20dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <Button
+                    android:id="@+id/download_button"
+                    android:layout_width="38dp"
+                    android:layout_height="38dp"
+                    android:background="@drawable/ic_download"
+                    android:contentDescription="download image"
+                    tools:ignore="TouchTargetSizeCheck" />
+
+                <Space
+                    android:layout_width="15px"
+                    android:layout_height="wrap_content" />
+            </LinearLayout>
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/tags_list"
